# automancer

./: .gitignore
app/electron/src/: index.ts
host/: pyproject.toml
host/pr1/fiber/: process.py
units/mfcontrol/: setup.py
units/opcua/: pyproject.toml
units/robotdesk/: pyproject.toml
units/robotdesk/client/: package.json
units/robotdesk/client/src/: index.ts
units/robotdesk/src/pr1_robotdesk/: __init__.py  device.py  executor.py  parser.py  process.py  runner.py
units/runzepump/: pyproject.toml
units/runzepump/client/: package.json
units/runzepump/client/src/: index.ts
units/runzepump/src/pr1_runzepump/: __init__.py  device.py  executor.py  parser.py  process.py
units/s3/: pyproject.toml
units/s3/src/pr1_s3/: process.py
units/slack/: pyproject.toml
