[build-system]
requires = ["setuptools>=66", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pr1"
dynamic = ["version"]
requires-python = ">3.11"

dependencies=[
  "comserde",
  "numpy",
  "quantops",
  "regex"
]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
root = ".."
